fix(header.css / index.html): change the position of the toggle in index.html and add z-index

--- a/sections-css-landing/header.css
+++ b/sections-css-landing/header.css
@@ -1,7 +1,7 @@
 header {
 }
 .navbar {
-  background-color: #03071a;
+  background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,7 +13,6 @@ header {
   right: 0;
 }
 .navbar-logo {
-  z-index: 2;
   color: #fff;
   font-size: 1.25em;
   font-weight: 600;
@@ -25,7 +24,6 @@ header {
   display: none;
 }
 .mobile-navbar-button {
-  z-index: 2;
   position: relative;
   border: none;
   width: 24px;
@@ -93,7 +91,7 @@ header {
   gap: 35px;
   text-align: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: radial-gradient(#0328ee, #03071a);
   margin: 0;
   transform: translateY(-100%);
@@ -102,6 +100,10 @@ header {
 .mobile-navbar-sections.show {
   transform: translateY(0);
 }
+.navbar, .navbar-logo, .mobile-navbar-button {
+    position: relative; 
+    z-index: 2; 
+  }
 .mobile-navbar-sections-a {
   color: #fff;
   font-size: 24px;
